RFC9068 implementation